# FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more
# details.
#
# You should have received a copy of the GNU General Public License along with
# this program; if not, write to the Free Software Foundation, Inc., 51
# Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
#
# Copyright 2013 (c) SkySQL Ab
#
# Author: Massimo Siani
# Date: August 2013
#




CHANGELOG

* Tue Sep 10 2013 Massimo Siani <massimo.siani@skysql.com>
- Fixed node state API incompatibility.
- Removed json simple, and switched to JSON objects only.

* Thu Sep 5 2013 Massimo Siani <massimo.siani@skysql.com>
- Remove any reference to SQLite db file.

* Wed Sep 4 2013 Massimo Siani <massimo.siani@skysql.com>
- Implemented Gson

* Tue Sep 3 2013 Massimo Siani <massimo.siani@skysql.com>
- Fixings

* Thu Aug 29 2013 Massimo Siani <massimo.siani@skysql.com> - 1.6.0
- Added: GET API calls compatible with new API

* Fri Aug 16 2013 Massimo Siani <massimo.siani@skysql.com> - 1.5.3
- Fixed: jdbc connection hangs on a node shutdown

* Fri Aug 2 2013 Massimo Siani <massimo.siani@skysql.com> - 1.5.2
- Added: no quit if no systems and/or nodes found
- Added: refresh rate set to 10 seconds until at least one node is defined
- Added: methods for JavaScript calls
- Fixed: if the connection hangs, close it and reconnect
- Removed Amazon unused library, size decreased to less than 1MB
- Known issue: if a node is shutted down while mysql is running, the monitor hangs for 15 minutes, then starts again. No need for manual intervention

* Thu Aug 1 2013 Massimo Siani <massimo.siani@skysql.com> - 1.5.1
- Fixed various bugs
- Use API
- Keep looking for nodes if systems exist
- Added buffering
- Added support for batch execution
- Json parsing & Gson interface added
- Code cleanup

* Wed May 22 2013 Timofey Turenko <timofey.turenko@skysql.com> - 1.4-2
- add sleep for 10 seconds before trying again to get systems

* Wed May 15 2013 Mark Riddoch <mark.riddoch@skysql.com> - 1.4-1