@@ -68,5 +68,10 @@
 			<artifactId>ness-syslog4j</artifactId>
 			<version>0.9.47-NESS-8</version>
 		</dependency>
+		<dependency>
+			<groupId>net.java.dev.jna</groupId>
+			<artifactId>jna</artifactId>
+			<version>4.0.0</version>
+		</dependency>
 	</dependencies>
 </project>
